--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,8 @@
 <resources>
 
     <!-- Base application theme. -->
+
+    <!-- Fix from https://stackoverflow.com/questions/50940219/failed-to-load-appcompat-actionbar-with-unknown-error-android-studio-3-1-3 -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
