--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
             android:id="@+id/temperatureValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="100"
+            android:text="@{String.valueOf(Math.round(weather.temperature)), default=`100`}"
             android:textColor="@android:color/white"
             android:textSize="150sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -44,7 +44,7 @@
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:text="At 5:00 PM, it will be "
+            android:text="@{`At ` + String.valueOf(weather.formattedTime) + `it will be`, default=`At 5:00 PM it will be`}"
             android:textColor="@color/half_white"
             android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@+id/temperatureValue"
@@ -111,7 +111,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="0.88"
+            android:text="@{String.valueOf(weather.humidity), default=`0.88`}"
             android:textColor="@android:color/white"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="@+id/humidityLabel"
@@ -138,7 +138,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="70%"
+            android:text="@{String.valueOf(Math.round(weather.precipChance *100)) + `%`, default=`50%`}"
             android:textColor="@android:color/white"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="@+id/precipLabel"
@@ -152,7 +152,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="@{weather.summary}"
+            android:text="@{weather.summary, default=`Stormy with a chance of meatballs`}"
             android:textColor="@android:color/white"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
