FIXED DATABINDING IMPORT ERROR (per Treehouse Forum suggestion)

--- a/app/src/main/res/layout/hourly_list_item.xml
+++ b/app/src/main/res/layout/hourly_list_item.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="hour"
-            type="com.example.artsonian.stormy.Weather.Hour"/>
+            type="com.example.artsonian.stormy.weather.Hour"/>
     </data>
 
 
