--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="weather"
-            type="com.example.artsonian.stormy.Weather.Current"/>
+            type="com.example.artsonian.stormy.weather.Current"/>
     </data>
 
     <android.support.constraint.ConstraintLayout
